# repro-surf-36

./: Cargo.toml  index.js
src/: main.rs
