[package]
name = "repro-surf-36"
version = "0.1.0"
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
femme = "1.2.0"
log = "0.4.8"
runtime = "0.3.0-alpha.6"
surf = "1.0.1"

#[patch.crates-io]
# surf = { path = "../../rustasync/surf", default-features = false, features = ["hyper-client"] }
